Changes to be committed:

--- a/sample.env
+++ b/sample.env
@@ -1,1 +1,2 @@
 PORT=3000
+MONGO_URI=mongodb+srv://ogagadaniel:supersecure@fcc-cluster.apt6v.mongodb.net/exerciseTracker?retryWrites=true&w=majority&appName=FCC-Cluster
